--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,6 +17,9 @@
       <%= link_to current_user.email, edit_user_registration_path %>
       <%= link_to "Log out", destroy_user_session_path, method: :delete %>
       <br>
+      Stripe customer ID:
+      <%= current_user.stripe_customer_id %>
+      <br>
       Plan:
       <%= current_user.plan %>
       <br>
