--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,7 @@
   <body>
     <br>
     <%= link_to 'Posts', posts_path %>
+    <%= link_to 'Pricing', pricing_path %>
     <% if current_user %>
       <%= link_to current_user.email, edit_user_registration_path %>
       <%= link_to "Log out", destroy_user_session_path, method: :delete %>
