Logged-in user can select any available subscription plan

--- a/app/views/static_pages/pricing.html.erb
+++ b/app/views/static_pages/pricing.html.erb
@@ -8,5 +8,6 @@
   <%= price.unit_amount / 100 %>
   <%= price.currency %>
   <%= price.recurring.interval %>
+  <%= link_to 'Subscribe', checkout_path(price: price.id), method: :post, remote: true %>
   <br>
 <% end %>
